--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="btn_save">저장</string>
 	<string name="btn_delete">삭제</string>
 	<string name="btn_cancel">취소</string>
+
+	<string name="msg_saved">저장되었습니다.</string>
+	<string name="msg_deleted">삭제되었습니다.</string>
 </resources>
