--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
 
 	<string name="msg_saved">저장되었습니다.</string>
 	<string name="msg_deleted">삭제되었습니다.</string>
+	<string name="request_failure">요청 실패</string>
 </resources>
