--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
 
 	<string name="request_failure">요청 실패</string>
 	<string name="no_result">결과 없음</string>
+	<string name="text_no_marker">저장된 장소가 없습니다.</string>
 </resources>
