[feat/refactor] item click 동작 구현 & UserMarker -> Place 변경

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,6 @@
 
 	<string name="request_failure">요청 실패. 인터넷 연결을 확인해 주세요.</string>
 	<string name="no_result">결과 없음</string>
-	<string name="text_no_marker">저장된 장소가 없습니다.</string>
+	<string name="text_no_place">저장된 장소가 없습니다.</string>
 	<string name="ic_place">place icon</string>
 </resources>
