--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-	<string name="app_name">My Place</string>
+	<string name="app_name">My Places</string>
 
 	<string name="btn_save">저장</string>
 	<string name="btn_delete">삭제</string>
